1999-08-05  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* goops.c: Removed old apply generic protocol.

	* goops.h (scm_si_code_table): New method slot.

	* goops.c: Updated Copyright notice.
	(scm_make): Initialize code table slot for methods.

1999-08-04  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* dispatch.scm, Makefile.am: Added dispatch.scm.

	* goops.c, goops.h (scm_sys_invalidate_class): Added;
	(default-slot-definition-class, keyword-access): New slots;
	Rearranged slots.
	(scm_m_atslot_ref, scm_m_atslot_set_x, scm_m_dispatch,
	scm_m_hash_dispatch): New macros.
	(memoize_method): Dispatcher for the generic function
	`memoize-method!'.  Plugs into scm_memoize_method in eval.c.

	* goops.scm (class-redefinition): Call %invalidate-class;
	Use new method dipatch protocol.

	* goops.c, goops.h: Renamed SCM_METACLASS_GOOPS_LAYOUT -->
	SCM_CLASS_CLASS_LAYOUT; SCM_CLASSF_ACCESSOR -->
	SCM_CLASSF_ACCESSOR_METHOD

1999-08-03  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* goops.c (create_standard_classes): New slot in <method>:
	code-table.

1999-07-27  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* configure.in: Check that libguile is fresh enough.

1999-07-25  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* goops.c (prep_hashsets): Added.
	(scm_sys_inherit_magic): Call prep_hashsets.

	* goops.scm (compute-std-cpl): Compute cpl correctly.
	(Topological sort from tiny clos.)

	* goops.c (scm_class_port, scm_class_input_port,
	scm_class_output_port, scm_class_input_output_port): Added.
	(make_standard_classes): Initialize new classes.
	(make_class_from_template): Added.
	(make_extended_class): Use make_class_from_template.
	(local_make_port_classes): Added. Plugs into
	objects.c:scm_make_port_classes.
	(make_port_classes): Make port classes corresponding to all
	existing port types.
	(scm_init_goops): Call make_port_classes.

	* describe.scm: Use Guile's format instead of slib's.

1999-06-24  Mikael Djurfeldt  <mdj@mdj-pc.nada.kth.se>
